{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 23,
  "lineage": "105f9a33-d6a3-81c4-611a-951aa26381ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "api_vegana_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057149785393:internet-gateway/igw-0da6e665247dfa156",
            "id": "igw-0da6e665247dfa156",
            "owner_id": "057149785393",
            "tags": {
              "Name": "api-vegana-igw"
            },
            "tags_all": {
              "Name": "api-vegana-igw"
            },
            "vpc_id": "vpc-0ded7bd8746f1c063"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.api_vegana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "api_vegana_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057149785393:route-table/rtb-09b414c0169125cc5",
            "id": "rtb-09b414c0169125cc5",
            "owner_id": "057149785393",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da6e665247dfa156",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-vegana-route-table"
            },
            "tags_all": {
              "Name": "api-vegana-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ded7bd8746f1c063"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.api_vegana_igw",
            "aws_vpc.api_vegana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "api_vegana_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092c9145e1efbe3d9",
            "route_table_id": "rtb-09b414c0169125cc5",
            "subnet_id": "subnet-0032003895bccb8a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.api_vegana_igw",
            "aws_route_table.api_vegana_route_table",
            "aws_subnet.api_vegana_subnet_public",
            "aws_vpc.api_vegana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_vegana_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057149785393:security-group/sg-0e6914c8a30c23d19",
            "description": "Permite acesso HTTP na porta 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6914c8a30c23d19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Access Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "api-vegana-sg",
            "name_prefix": "",
            "owner_id": "057149785393",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-vegana-sg"
            },
            "tags_all": {
              "Name": "api-vegana-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ded7bd8746f1c063"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.api_vegana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "api_vegana_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057149785393:subnet/subnet-0032003895bccb8a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0032003895bccb8a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057149785393",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-vegana-subnet-public"
            },
            "tags_all": {
              "Name": "api-vegana-subnet-public"
            },
            "vpc_id": "vpc-0ded7bd8746f1c063"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.api_vegana_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "api_vegana_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057149785393:vpc/vpc-0ded7bd8746f1c063",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0791598d8cd642333",
            "default_route_table_id": "rtb-0ee1a29ef2ba0c881",
            "default_security_group_id": "sg-01d6f238e2a5c278b",
            "dhcp_options_id": "dopt-09fa6cf1ef3820792",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ded7bd8746f1c063",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee1a29ef2ba0c881",
            "owner_id": "057149785393",
            "tags": {
              "Name": "api-vegana-vpc"
            },
            "tags_all": {
              "Name": "api-vegana-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}